Bug 495350.  Do a better job of keeping track of our line participant count.  r+sr=roc